python-web-server/tests/http/requests/invalid/006.py
from web_server.http.errors import LimitRequestLine

request = LimitRequestLine
